Updated notebook with tests

--- a/jupyter_test/URL_Scraper_test.ipynb
+++ b/jupyter_test/URL_Scraper_test.ipynb
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0de02e2f",
+   "id": "995cab6b",
    "metadata": {},
    "outputs": [
     {
@@ -388,8 +388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9cdcc69a",
+   "execution_count": 11,
+   "id": "3de1741b",
    "metadata": {},
    "outputs": [
     {
@@ -403,16 +403,74 @@
    ],
    "source": [
     "# price = [item for item in soup.find_all('a', attrs={'data-testid' : True}) if item['data-testid']=='listing-details-link']\n",
-    "prices = [item for item in soup.find_all('span', attrs={'data-testid' : True}) if item['data-testid']=='price']\n",
+    "prices = [item for item in soup.find_all('span', attrs={'data-testid' : True}) if item['data-testid']=='price' and 'pcm' in item.text]\n",
     "\n",
+    "final_pcm = None\n",
     "for p in prices:\n",
-    "    print(p.get_text())\n"
+    "    print(p.get_text())\n",
+    "    final_pcm = p.get_text()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "44c42b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1,200'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1,200'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_pcm[1:-4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7c1ab432",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "baths = [item for item in soup.find_all('span', attrs={'data-testid' : 'baths-label'})]\n",
+    "\n",
+    "for tag in baths:\n",
+    "    baths = tag.get_text()\n",
+    "    baths = baths.split(' ')[0]\n",
+    "    print(baths)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "533ae6e8",
+   "id": "a7e12ec1",
    "metadata": {},
    "outputs": [],
    "source": []
